--- a/acmart.dtx
+++ b/acmart.dtx
@@ -867,14 +867,12 @@
 %
 % \DescribeMacro{\acmArticleSeq}%
 % The articles in the same issue of a journal have a \emph{sequence
-% number}.  It is used to vertically position the black blob on the first
-% page of some formats.  By default it is the same as the article number,
+% number}.  By default it is the same as the article number,
 % but the command \cs{acmArticleSeq}\marg{n} can be used to change it:
 % \begin{verbatim}
 % \acmArticle{39}   % The sequence number will be 39 by default
 % \acmArticleSeq{5} % We redefine it to 5
 % \end{verbatim}
-% Setting this number to zero suppresses the blob.
 %
 % \DescribeMacro{\acmSubmissionID}%
 % If your paper got a Submission~ID from the Conference Management
@@ -884,18 +882,6 @@
 % \end{verbatim}
 %
 %
-% \DescribeMacro{\acmPrice}%
-% The macro \cs{acmPrice}\marg{price} sets the price for the article,
-% for example,
-% \begin{verbatim}
-% \acmPrice{25.00}
-% \end{verbatim}
-% Note that you do not need to put the dollar sign here, just the
-% amount.  By default the price is \$15.00, unless the copyright is
-% set to |usgov|, |rightsretained|, |iw3c2w3|, or |iw3c2w3g|, when it
-% is suppressed.  Note that to override the defaults you need to set
-% the price \emph{after} the \cs{setcopyright} command.  Also, the
-% command |\acmPrice{}| suppresses the printing of the price.
 %
 % \DescribeMacro{\acmISBN}%
 % Book-like volumes have ISBN numbers attached to them.  The macro
@@ -1004,8 +990,8 @@
 %
 % \DescribeMacro{\setcopyright}
 % There are several possibilities for the copyright of the papers
-% published by the ACM: the authors may transfer the rights to the ACM,
-% license them to the ACM, some or all authors might be employees of the
+% published by the ACM: the authors may license the paper 
+% to the ACM, some or all authors might be employees of the
 % US or Canadian governments, etc.  Accordingly the command
 % \verb|\setcopyright{...}| is introduced.  Its argument is the
 % copyright status of the paper, for example,
@@ -1025,8 +1011,6 @@
 %     \midrule
 %     \texttt{none} & The copyright and permission information is not
 %     typeset.  (This is the option for some ACM conferences.) \\
-%     \texttt{acmcopyright} & The authors transfer the copyright to the
-%     ACM (the ``traditional'' choice).\\
 %     \texttt{acmlicensed} & The authors retain the copyright but
 %     license the publication rights to ACM\@. \\
 %     \texttt{rightsretained} & The authors retain the copyright and
@@ -1058,8 +1042,15 @@
 %     \texttt{cc} & Creative Commons license.  If this key is set,
 %     \textsl{doclicense} images are used to typeset the license. See
 %     also \cs{setcctype} command.  Note that at present this license
-%     can be used only for \texttt{acmengage} format or for
-%     \texttt{nonacm} publications.\\
+%     can be used only either for \texttt{acmengage} format, or for
+%     \texttt{nonacm} publications, or for the authors that meet any
+%     of the following requirements: (a)~part of the ACM Open Program;
+%     (b)~publishing in a Gold Open Access publication;
+%     (c)~paying the Open Access APC;
+%     (d)~part of the Google publishing agreement.\\
+%     \texttt{acmcopyright} & The authors transfer the copyright to the
+%     ACM.  This choice is no longer available for the
+%     non-commissioned authors and will trigger a warning.\\
 %     \bottomrule
 %   \end{tabularx}
 % \end{table}
@@ -2103,10 +2094,7 @@
 %
 % \DescribeMacro{\AtBeginMaketitle}%
 % Another hook is \cs{AtBeginMaketitle}.  The commands in this hook
-% are executed before \cs{maketitle}, for example,
-% \begin{verbatim}
-% \AtBeginMaketitle{\acmPrice{125.00}}
-% \end{verbatim}
+% are executed before \cs{maketitle}.
 %
 %
 %\subsection{Currently supported publications}
@@ -2277,7 +2265,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2023/10/14 v1.92 Typesetting articles for the Association for Computing Machinery]
+[2023/10/22 v2.00 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -5211,12 +5199,8 @@
 % \end{macro}
 %
 % \begin{macro}{\acmPrice}
-%   The price
-%    \begin{macrocode}
-\def\acmPrice#1{\def\@acmPrice{#1}}
-\acmPrice{15.00}
-%    \end{macrocode}
-%
+% \changes{v2.00}{2023/10/22}{Deleted macro}
+%   The price---obsolete
 % \end{macro}
 %
 %
@@ -5749,6 +5733,8 @@
 % to iw3c2w3 or iw3c2w3g}
 % \changes{v1.51}{2018/04/05}{Corrected the bug with price suppression}
 % \changes{v1.85}{2022/05/08}{Added CC licenses}
+% \changes{v2.00}{2023/10/22}{Deleted acmPrice}
+% \changes{v2.00}{2023/10/22}{Deleted acmPrice}
 % Keys:
 %    \begin{macrocode}
 \define@choicekey*{ACM@}{acmcopyrightmode}[%
@@ -5770,13 +5756,11 @@
   \fi
   \ifnum\acm@copyrightmode=3\relax % rightsretained
    \@acmownedfalse
-   \AtBeginDocument{\acmPrice{}}%
   \fi
   \ifnum\acm@copyrightmode=4\relax % usgov
    \@printpermissiontrue
    \@printcopyrightfalse
    \@acmownedfalse
-   \AtBeginDocument{\acmPrice{}}%
   \fi
   \ifnum\acm@copyrightmode=6\relax % cagov
    \@acmownedfalse
@@ -5798,15 +5782,12 @@
   \fi
   \ifnum\acm@copyrightmode=13\relax % iw3c2w3
    \@acmownedfalse
-   \AtBeginDocument{\acmPrice{}}%
   \fi
   \ifnum\acm@copyrightmode=14\relax % iw3c2w3g
    \@acmownedfalse
-   \AtBeginDocument{\acmPrice{}}%
   \fi
   \ifnum\acm@copyrightmode=15\relax % cc
    \@acmownedfalse
-   \AtBeginDocument{\acmPrice{}}%
   \fi}
 %    \end{macrocode}
 %
@@ -5814,7 +5795,7 @@
 %   This is the syntactic sugar around setting keys.
 %    \begin{macrocode}
 \def\setcopyright#1{\setkeys{ACM@}{acmcopyrightmode=#1}}
-\setcopyright{acmcopyright}
+\setcopyright{acmlicensed}
 %    \end{macrocode}
 %
 % \end{macro}
@@ -5836,12 +5817,13 @@
 % licensedcagov}
 % \changes{v1.52}{2018/04/09}{Rewording of licenses}
 % \changes{v1.85}{2022/05/08}{Added CC licenses}
+% \changes{v2.00}{2023/10/22}{Changed wording}
 %   Here is the owner of the copyright
 %    \begin{macrocode}
 \def\@copyrightowner{%
   \ifcase\acm@copyrightmode\relax % none
   \or % acmcopyright
-  Association for Computing Machinery.
+  ACM\@.
   \or % acmlicensed
   Copyright held by the owner/author(s). Publication rights licensed to
   ACM\@.
@@ -5849,22 +5831,21 @@
   Copyright held by the owner/author(s).
   \or % usgov
   \or % usgovmixed
-  Association for Computing Machinery.
+  Copyright held by the owner/author(s).
   \or % cagov
-  Crown in Right of Canada.
+  Copyright Crown in Right of Canada.
   \or %cagovmixed
-  Association for Computing Machinery.
+  Copyright held by the owner/author(s).
   \or %licensedusgovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
   ACM\@.
   \or % licensedcagov
-  Crown in Right of Canada. Publication rights licensed to
-  ACM\@.
+  Copyright held by the owner/author(s). 
   \or %licensedcagovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
   ACM\@.
   \or % othergov
-  Association for Computing Machinery.
+  Copyright held by the owner/author(s). 
   \or % licensedothergov
   Copyright held by the owner/author(s). Publication rights licensed to
   ACM\@.
@@ -5896,6 +5877,7 @@
 % At present cC licenses can be used only for acmengage format or for
 % non-acm stuff.  This macro checks whether the CC license is
 % applicable and generates an error if not.
+% \changes{v2.00}{2023/10/22}{Moved to warning}
 %    \begin{macrocode}
 \def\@ACM@copyright@check@cc{%
   \if@ACM@nonacm
@@ -5906,7 +5888,7 @@
         \ClassInfo{\@classname}{Using CC license with ACM Enage
           material}%
       \else
-      \ClassError{\@classname}{%
+      \ClassWarning{\@classname}{%
         Sorry, Creative Commons licenses are\MessageBreak
         currently not used with ACM publications\MessageBreak
         typeset by the authors}{Please use nonacm 
@@ -5925,6 +5907,7 @@
 % \changes{v1.85}{2022/05/08}{Added CC licenses}
 % \changes{v1.87}{2022/07/30}{CC licenses now are allowed only for
 % non-acm or ACM engage publications}
+% \changes{v2.00}{2023/10/24}{Rewrote wording}
 %   The canned permission block.
 %    \begin{macrocode}
 \def\@copyrightpermission{%
@@ -5936,10 +5919,10 @@
    advantage and that copies bear this notice and the full citation on
    the first page. Copyrights for components of this work owned by
    others than ACM must be honored. Abstracting with credit is
-   permitted. To copy otherwise, or republish, to post on servers or to
-   redistribute to lists, requires prior specific permission
-   and\hspace*{.5pt}/or  a fee. Request permissions from
-   permissions@acm.org.
+   permitted. To copy otherwise, or republish, to post on servers or
+   to redistribute to lists, requires prior specific permission
+   and\hspace*{.5pt}/or 
+   a fee. Request permissions from permissions@acm.org.
   \or % acmlicensed
    Permission to make digital or hard copies of all or part of this
    work for personal or classroom use is granted without fee provided
@@ -5947,97 +5930,102 @@
    advantage and that copies bear this notice and the full citation on
    the first page. Copyrights for components of this work owned by
    others than the author(s) must be honored. Abstracting with credit
-   is permitted.  To copy otherwise, or republish, to post on servers
-   or to  redistribute to lists, requires prior specific permission
-   and\hspace*{.5pt}/or  a fee. Request permissions from
-   permissions@acm.org.
+   is permitted. To copy otherwise, or republish, to post on servers
+   or to redistribute to lists, requires prior specific permission
+   and\hspace*{.5pt}/or a fee. Request permissions from
+   permissions@acm.org. 
   \or % rightsretained
-   Permission to make digital or hard copies of part or all of this work
-   for personal or classroom use is granted without fee provided that
-   copies are not made or distributed for profit or commercial advantage
-   and that copies bear this notice and the full citation on the first
-   page. Copyrights for third-party components of this work must be
-   honored. For all other uses, contact the
-   owner\hspace*{.5pt}/author(s).
+   Permission to make digital or hard copies of part or all of this
+   work for personal or classroom use is granted without fee provided
+   that copies are not made or distributed for profit or commercial
+   advantage and that copies bear this notice and the full citation on
+   the first page. Copyrights for third-party components of this work
+   must be honored. For all other uses, contact the
+   owner\hspace*{.5pt}/author(s). 
   \or % usgov
    This paper is authored by an employee(s) of the United States
    Government and is in the public domain. Non-exclusive copying or
    redistribution is allowed, provided that the article citation is
    given and the authors and agency are clearly identified as its
-   source.
+   source. All others Request permissions from
+   owner\hspace*{.5pt}/author(s). 
   \or % usgovmixed
    ACM acknowledges that this contribution was authored or co-authored
    by an employee, contractor, or affiliate of the United States
    government. As such, the United States government retains a
    nonexclusive, royalty-free right to publish or reproduce this
-   article, or to allow others to do so, for government purposes only.
+   article, or to allow others to do so, for government purposes
+   only. Request permissions from owner\hspace*{.5pt}/author(s). 
   \or % cagov
-   This article was authored by employees of the Government of Canada.
-   As such, the Canadian government retains all interest in the
-   copyright to this work and grants to ACM a nonexclusive,
-   royalty-free right to publish or reproduce this article, or to allow
-   others to do so, provided that clear attribution is given both to
-   the authors and the Canadian government agency employing them.
-   Permission to make digital or hard copies for personal or classroom
-   use is granted. Copies must bear this notice and the full citation
-   on the first page.  Copyrights for components of this work owned by
-   others than the Canadian Government must be honored. To copy
-   otherwise, distribute, republish, or post, requires prior specific
-   permission and\hspace*{.5pt}/or a fee. Request permissions from
-   permissions@acm.org.
+   This article was authored by employees of the Government of
+   Canada. As such, the Canadian government retains all interest in
+   the copyright to this work and grants to ACM a nonexclusive,
+   royalty-free right to publish or reproduce this article, or to
+   allow others to do so, provided that clear attribution is given
+   both to the authors and the Canadian government agency employing
+   them. Permission to make digital or hard copies for personal or
+   classroom use is granted. Copies must bear this notice and the full
+   citation on the first page. Copyrights for components of this work
+   owned by others than the Canadian Government must be honored. To
+   copy otherwise, distribute, republish, or post, requires prior
+   specific permission and/or a fee. Request permissions from
+   owner\hspace*{.5pt}/author(s). 
   \or % cagovmixed
    ACM acknowledges that this contribution was co-authored by an
    affiliate of the national government of Canada. As such, the Crown
-   in Right of Canada retains an equal interest in the copyright.
-   Reprints must include clear attribution to ACM and the author's
-   government agency affiliation.  Permission to make digital or hard
-   copies for personal or classroom use is granted.  Copies must bear
-   this notice and the full citation on the first page. Copyrights for
-   components of this work owned by others than ACM must be honored.
-   To copy otherwise, distribute, republish, or post, requires prior
-   specific permission and\hspace*{.5pt}/or a fee. Request permissions
-   from permissions@acm.org.
+   in Right of Canada retains an equal interest in the
+   copyright. Reprints must include clear attribution to ACM and the
+   author’s government agency affiliation. Permission to make digital
+   or hard copies for personal or classroom use is granted. Copies
+   must bear this notice and the full citation on the first
+   page. Copyrights for components of this work owned by others than
+   ACM must be honored. To copy otherwise, distribute, republish, or
+   post, requires prior specific permission and/or a fee. Request
+   permissions from owner\hspace*{.5pt}/author(s). 
   \or % licensedusgovmixed
    Publication rights licensed to ACM\@. ACM acknowledges that this
    contribution was authored or co-authored by an employee, contractor
    or affiliate of the United States government. As such, the
    Government retains a nonexclusive, royalty-free right to publish or
    reproduce this article, or to allow others to do so, for Government
-   purposes only.
+   purposes only. Request permissions from
+   owner\hspace*{.5pt}/author(s). 
   \or % licensedcagov
-   This article was authored by employees of the Government of Canada.
-   As such, the Canadian government retains all interest in the
-   copyright to this work and grants to ACM a nonexclusive,
-   royalty-free right to publish or reproduce this article, or to allow
-   others to do so, provided that clear attribution is given both to
-   the authors and the Canadian government agency employing them.
-   Permission to make digital or hard copies for personal or classroom
-   use is granted. Copies must bear this notice and the full citation
-   on the first page.  Copyrights for components of this work owned by
-   others than the Canadian Government must be honored. To copy
-   otherwise, distribute, republish, or post, requires prior specific
-   permission and\hspace*{.5pt}/or a fee. Request permissions from
-   permissions@acm.org.
+   This article was authored by employees of the Government of
+   Canada. As such, the Canadian government retains all interest in
+   the copyright to this work and grants to ACM a nonexclusive,
+   royalty-free right to publish or reproduce this article, or to
+   allow others to do so, provided that clear attribution is given
+   both to the authors and the Canadian government agency employing
+   them. Permission to make digital or hard copies for personal or
+   classroom use is granted. Copies must bear this notice and the full
+   citation on the first page. Copyrights for components of this work
+   owned by others than the Canadian Government must be honored. To
+   copy otherwise, distribute, republish, or post, requires prior
+   specific permission and/or a fee. Request permissions from
+   owner\hspace*{.5pt}/author(s). 
   \or % licensedcagovmixed
-   Publication rights licensed to ACM\@. ACM acknowledges that this
+   Publication rights licensed to ACM. ACM acknowledges that this
    contribution was authored or co-authored by an employee, contractor
    or affiliate of the national government of Canada. As such, the
    Government retains a nonexclusive, royalty-free right to publish or
    reproduce this article, or to allow others to do so, for Government
-   purposes only.
+   purposes only. Request permissions from
+   owner\hspace*{.5pt}/author(s). 
   \or % othergov
    ACM acknowledges that this contribution was authored or co-authored
-   by an employee, contractor or affiliate of a national government. As
-   such, the Government retains a nonexclusive, royalty-free right to
-   publish or reproduce this article, or to allow others to do so, for
-   Government purposes only.
+   by an employee, contractor or affiliate of a national
+   government. As such, the Government retains a nonexclusive,
+   royalty-free right to publish or reproduce this article, or to
+   allow others to do so, for Government purposes only. Request
+   permissions from owner\hspace*{.5pt}/author(s). 
   \or % licensedothergov
    Publication rights licensed to ACM\@. ACM acknowledges that this
    contribution was authored or co-authored by an employee, contractor
    or affiliate of a national government. As such, the Government
    retains a nonexclusive, royalty-free right to publish or reproduce
    this article, or to allow others to do so, for Government purposes
-   only.
+   only. Request permissions from owner\hspace*{.5pt}/author(s). 
  \or % iw3c2w3
    This paper is published under the Creative Commons Attribution~4.0
    International (CC-BY~4.0) license. Authors reserve their rights to
@@ -6239,7 +6227,9 @@
 % \changes{v1.76}{2021/04/05}{Put \cs{par} inside group for keywords}
 % \changes{v1.83}{2022/02/20}{I13n}
 % \changes{v1.85}{2022/05/08}{acmengage}
-% \changes{v1.87}{2022/07/30}{CC license are allowed for non-acm publications}
+% \changes{v1.87}{2022/07/30}{CC license are allowed for non-acm
+% publications}
+% \changes{v2.00}{2023/10/24}{Deleted acmPrice}
 %   The (in)famous \cs{maketitle}.  Note that in |sigchi-a| mode, authors
 %   are \emph{not} in the title box.
 %
@@ -6337,12 +6327,10 @@
         \else
           \if@ACM@nonacm\else
             \if@ACM@journal@bibstrip
-              \@permissionCodeOne/\@acmYear/\@acmMonth-ART\@acmArticle
-              \ifx\@acmPrice\@empty\else\ \$\@acmPrice\fi\\
+              \@permissionCodeOne/\@acmYear/\@acmMonth-ART\@acmArticle\\
               \@formatdoi{\@acmDOI}%
             \else % Conference
-              \ifx\@acmISBN\@empty\else ACM~ISBN~\@acmISBN
-              \ifx\@acmPrice\@empty.\else\dots\$\@acmPrice\fi\\\fi
+              \ifx\@acmISBN\@empty\else ACM~ISBN~\@acmISBN\\\fi
               \ifx\@acmDOI\@empty\else\@formatdoi{\@acmDOI}\fi%
             \fi
           \fi
@@ -7808,33 +7796,14 @@
 % \end{macro}
 %
 % \begin{macro}{\@folio@wd}
+% \changes{v2.00}{2023/10/22}{Obsoleted macro}
 % \begin{macro}{\@folio@ht}
+% \changes{v2.00}{2023/10/22}{Obsoleted macro}
 % \begin{macro}{\@folio@voffset}
+% \changes{v2.00}{2023/10/22}{Obsoleted macro}
 % \begin{macro}{\@folio@max}
+% \changes{v2.00}{2023/10/22}{Obsoleted macro}
 %   Folio blob width, height, offsets and max number
-%    \begin{macrocode}
-\newdimen\@folio@wd
-\@folio@wd=\z@
-\newdimen\@folio@ht
-\@folio@ht=\z@
-\newdimen\@folio@voffset
-\@folio@voffset=\z@
-\def\@folio@max{1}
-\ifcase\ACM@format@nr
-\relax % manuscript
-\or % acmsmall
-  \@folio@wd=45.75pt\relax
-  \@folio@ht=1.25in\relax
-  \@folio@voffset=.2in\relax
-  \def\@folio@max{8}
-\or % acmlarge
-  \@folio@wd=43.25pt\relax
-  \@folio@ht=79pt\relax
-  \@folio@voffset=.55in\relax
-  \def\@folio@max{10}
-\fi
-%    \end{macrocode}
-%
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -7844,36 +7813,8 @@
 % \changes{v1.44}{2017/08/11}{Suppress the blob if acmArticleSeq is empty}
 % \changes{v1.45}{2017/08/15}{Switched \cs{bfeseries}\cs{sffamily} to
 % \cs{sffamily}\cs{bfseries}}
+% \changes{v2.00}{2023/10/22}{Obsoleted macro}
 %   The macro to typeset the folio blob.
-%    \begin{macrocode}
-\def\@folioblob{\@tempcnta=0\@acmArticleSeq\relax
-  \ifnum\@tempcnta=0\relax\else
-%    \end{macrocode}
-% First, we calculate \cs{@acmArticleSeq} modulo \cs{@folio@max}
-%    \begin{macrocode}
-  \loop
-     \ifnum\@tempcnta>\@folio@max\relax
-      \advance\@tempcnta by - \@folio@max
-   \repeat
-%    \end{macrocode}
-%
-%    \begin{macrocode}
-    \advance\@tempcnta by -1\relax
-    \@tempdima=\@folio@ht\relax
-    \multiply\@tempdima by \the\@tempcnta\relax
-    \advance\@tempdima by -\@folio@voffset\relax
-    \begin{picture}(0,0)
-    \makebox[\z@]{\raisebox{-\@tempdima}{%
-        \rlap{%
-          \raisebox{-0.45\@folio@ht}[\z@][\z@]{%
-            \rule{\@folio@wd}{\@folio@ht}}}%
-        \parbox{\@folio@wd}{%
-          \centering
-          \textcolor{white}{\LARGE\sffamily\bfseries\@acmArticle}}}}
-  \end{picture}\fi}
-
-%    \end{macrocode}
-%
 %
 % \end{macro}
 %
@@ -7890,6 +7831,7 @@
 % \changes{v1.59}{2019/04/20}{Moved page styles to \cs{AtBeginDocument}}
 % \changes{v1.87}{2022/08/14}{Special treatment for acmcp}
 % \changes{v1.89}{2022/12/27}{Moved badges here}
+% \changes{v2.00}{2023/10/22}{Deleted blobs}
 %   The page style for the first page only.
 %    \begin{macrocode}
 \AtBeginDocument{%
@@ -7912,22 +7854,20 @@
         \@acmNumber, Article \@acmArticle.  Publication date:
         \@acmPubDate.}%
       \fi%
-      \fancyhead[LE]{\ACM@linecountL\@folioblob\@acmBadgeL}%
+      \fancyhead[LE]{\ACM@linecountL\@acmBadgeL}%
       \fancyhead[LO]{\ACM@linecountL\@acmBadgeL}%
-      \fancyhead[RO]{\@acmBadgeR\@folioblob}%
+      \fancyhead[RO]{\@acmBadgeR}%
       \fancyhead[RE]{\@acmBadgeR}%
-      \fancyheadoffset[RO,LE]{0.6\@folio@wd}%
     \or % acmlarge
       \if@ACM@nonacm\else%
         \fancyfoot[RO,LE]{\footnotesize \@journalNameShort, Vol. \@acmVolume, No.
         \@acmNumber, Article \@acmArticle.  Publication date:
         \@acmPubDate.}%
       \fi%
-      \fancyhead[RO]{\@acmBadgeR\@folioblob}%
+      \fancyhead[RO]{\@acmBadgeR}%
       \fancyhead[RE]{\@acmBadgeR}%
-      \fancyhead[LE]{\ACM@linecountL\@folioblob\@acmBadgeL}%
+      \fancyhead[LE]{\ACM@linecountL\@acmBadgeL}%
       \fancyhead[LO]{\ACM@linecountL\@acmBadgeL}%
-      \fancyheadoffset[RO,LE]{1.4\@folio@wd}%
     \or % acmtog
       \if@ACM@nonacm\else%
         \fancyfoot[RO,LE]{\footnotesize \@journalNameShort, Vol. \@acmVolume, No.
