--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -54,7 +54,7 @@
 %% the commands and values with those provided to you when you
 %% complete the rights form.
 %
-\setcopyright{acmcopyright}
+\setcopyright{acmlicensed}
 \copyrightyear{2018}
 \acmYear{2018}
 \acmDOI{XXXXXXX.XXXXXXX}
@@ -71,7 +71,6 @@
 %%
 %%\acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection,
 %%  June 03--05, 2018, Woodstock, NY} 
-\acmPrice{15.00}
 \acmISBN{978-1-4503-XXXX-X/18/06}
 %</manuscript|sigconf|authordraft|sigplan|sigchi|sigchi-a|acmsmall-conf|sigconf-i13n>
 
