--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.93   Added PACMSE
+
 Version 1.92   Documentation update
 	       Emergency change: changed order of hyperref and hyperxmp
 	       due to changes in the undelying packages
