--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -3,9 +3,9 @@
 %% We also need currently use lualatex-dev for compilation!
 \ifx\HCode\Undef
 \DocumentMetadata{
- %pdfversion=2.0,
- pdfversion=1.7,pdfstandard=ua-1,
- testphase=phase-III}
+ pdfversion=2.0,pdfstandard=ua-1,
+% pdfversion=1.7,pdfstandard=ua-1,
+ testphase={phase-III,firstaid}}
 \else
 \DocumentMetadata{}
 \fi
