--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -443,7 +443,7 @@ use the {\verb|acmsmall|} template style:
 
 The majority of conference proceedings documentation will use the {\verb|acmconf|} template style.
 \begin{itemize}
-\item {\texttt{acmconf}}: The default proceedings template style.
+\item {\texttt{sigconf}}: The default proceedings template style.
 \item{\texttt{sigchi}}: Used for SIGCHI conference articles.
 \item{\texttt{sigplan}}: Used for SIGPLAN conference articles.
 \end{itemize}
