--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 2.02.  Documentation update.
+
 Version 2.01   \acmPrice now produces a warning.
 
 Version 2.00   ACM switches to electronic only version.
