--- a/README
+++ b/README
@@ -13,6 +13,8 @@ The production version is the one on CTAN and ACM sites.
 Changes
 
 Version 2.02.  Documentation update.
+	       Changes in TOG templates
+	       Corrected typo in ACM/IMS journals
 
 Version 2.01   \acmPrice now produces a warning.
 
